[gd_scene load_steps=4 format=3 uid="uid://d4beion478rs4"]

[ext_resource type="Script" uid="uid://cvpgckfddoygv" path="res://scripts/exchange_menu.gd" id="1_l0566"]
[ext_resource type="PackedScene" uid="uid://lqfemjgyr6pj" path="res://scenes/gamemanager.tscn" id="3_4y0i4"]
[ext_resource type="PackedScene" uid="uid://cs61mac28xl2r" path="res://scenes/mailbox_dialog.tscn" id="3_f3644"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_l0566")

[node name="GameManager" parent="." instance=ExtResource("3_4y0i4")]

[node name="Node2D" parent="." instance=ExtResource("3_f3644")]
position = Vector2(-68, -81)

[node name="money_to_finger" type="Button" parent="."]
z_index = 6
offset_left = -132.0
offset_top = -94.0
offset_right = -37.0
offset_bottom = -63.0
text = "Buy finger"

[node name="finger_to_cig" type="Button" parent="."]
z_index = 11
offset_left = -133.0
offset_top = 21.0
offset_right = -70.0
offset_bottom = 52.0
text = "buy cig
"

[node name="cig_to_tumor" type="Button" parent="."]
z_index = 7
offset_left = -133.0
offset_top = -29.0
offset_right = -38.0
offset_bottom = 2.0
text = "Buy tumor"

[connection signal="pressed" from="money_to_finger" to="." method="_on_money_to_finger_pressed"]
[connection signal="pressed" from="finger_to_cig" to="." method="_on_finger_to_cig_pressed"]
[connection signal="pressed" from="cig_to_tumor" to="." method="_on_cig_to_tumor_pressed"]
